--- a/site.css
+++ b/site.css
@@ -4,3 +4,7 @@
 .eduPlace {float: center;}
 .eduDuratoion {float: right;}
 .eduTitle {float: left; border-bottom: 1px solid;}
+
+.panel-default > .panel-heading :hover{
+  background-color: #a6d9ff;
+}
